gcc/testsuite/rust/rustc/ui/suggestions/suggest-remove-refs-4_dg.rs
//@ run-rustfix
fn main() {
    let foo = &[1,2,3].iter();
    for _i in &foo {} // { dg-error ".E0277." "" { target *-*-* } }
}

